# LRCMake-GTK

./: .gitignore  .pylintrc  README.md  com.github.dzheremi.lrcmake.flatpak  com.github.dzheremi.lrcmake.json  io.github.dzheremi2.Chronograph.json  io.github.dzheremi2.chronograph.json  io.github.dzheremi2.lrcmake-gtk.json  io.github.dzheremi2.lrcmake_gtk.json  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  rewrite.yml
chronograph/: __builtins__.pyi  chronograph.in  main.py  meson.build  shared.py.in  shared.pyi  window.py  window.pyi
chronograph/ui/: BoxDialog.py  BoxDialog.pyi  LrclibTrack.py  LrclibTrack.pyi  Preferences.py  Preferences.pyi  SongCard.py  SongCard.pyi  SyncLine.py  SyncLine.pyi
chronograph/utils/: export_data.py  export_data.pyi  file.py  file.pyi  file_mutagen_id3.py  file_mutagen_id3.pyi  file_mutagen_vorbis.py  file_mutagen_vorbis.pyi  parsers.py  parsers.pyi  publish.py  publish.pyi  select_data.py  select_data.pyi
data/: Chronograph.gresource.xml.in  chronograph.gresource.xml.in  com.github.dzheremi.lrcmake.desktop.in  com.github.dzheremi.lrcmake.gschema.xml  com.github.dzheremi.lrcmake.metainfo.xml.in  com.github.dzheremi.lrcmake.service.in  io.github.dzheremi2.Chronograph.desktop.in  io.github.dzheremi2.Chronograph.gschema.xml.in  io.github.dzheremi2.Chronograph.metainfo.xml.in  io.github.dzheremi2.Chronograph.service.in  io.github.dzheremi2.chronograph.desktop.in  io.github.dzheremi2.chronograph.gschema.xml.in  io.github.dzheremi2.chronograph.metainfo.xml.in  io.github.dzheremi2.chronograph.service.in  io.github.dzheremi2.lrcmake-gtk.desktop.in  io.github.dzheremi2.lrcmake-gtk.gschema.xml  io.github.dzheremi2.lrcmake-gtk.gschema.xml.in  io.github.dzheremi2.lrcmake-gtk.metainfo.xml.in  io.github.dzheremi2.lrcmake-gtk.service.in  io.github.dzheremi2.lrcmake_gtk.desktop.in  io.github.dzheremi2.lrcmake_gtk.gschema.xml  io.github.dzheremi2.lrcmake_gtk.metainfo.xml.in  io.github.dzheremi2.lrcmake_gtk.service.in  lrcmake-gtk.gresource.xml.in  lrcmake.gresource.xml  meson.build
data/gtk/: help-overlay.blp  window.blp
data/gtk/components/: fileDetails.blp  lrclibTrack.blp  lrclibWindow.blp  noDirSelectedGreeting.blp  preferences.blp  savedLocation.blp  songCard.blp  syncLine.blp
data/gtk/css/: style.css
data/gtk/ui/: BoxDialog.blp  LrclibTrack.blp  Preferences.blp  SongCard.blp  SyncLine.blp
data/icons/: meson.build
lrcmake/: lrcmake.in  main.py  meson.build  shared.py.in  window.py
lrcmake/components/: fileDetails.py  lrclibTrack.py  lrclibWindow.py  noDirSelectedGreeting.py  preferences.py  savedLocation.py  songCard.py  syncLine.py
lrcmake/methods/: caching.py  exportData.py  parsers.py  publish.py  selectData.py
po/: LINGUAS  POTFILES.in  de.po  el.po  en.po  es.po  fr.po  he.po  hu.po  id.po  is.po  it.po  jp.po  ko.po  lrcmake.pot  meson.build  no.po  pl.po  pt.po  qa.po  ro.po  ru.po  tr.po  ua.po  vi.po
src/: lrcmake.gresource.xml  lrcmake.in  main.py  meson.build  shared.py  shared.py.in  window.py
src/components/: fileDetails.py  noDirSelectedGreeting.py  songCard.py  syncLine.py
src/gtk/: help-overlay.blp  window.blp
src/gtk/components/: fileDetails.blp  noDirSelectedGreeting.blp  songCard.blp
src/gtk/css/: style.css
src/methods/: exportData.py  parsers.py  publish.py  selectData.py
